aks-virtualservice-hijack/kyvernotest/prevent-vs-hostname-hijack.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-vs-hostname-hijack
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: enforce-namespace-hostname
    match:
      any:
      - resources:
          kinds:
          - "VirtualService"
    validate:
      message: "VirtualService hostname must start with the namespace name"
      pattern:
        spec:
          hosts:
          - "{{request.object.metadata.namespace}}-*"
