aks-virtualservice-hijack/kyvernotest/test/mutation-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-mutation
---
# This should get mutated to test-mutation-example.com
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-test1
  namespace: test-mutation
spec:
  hosts:
    - "example.com"
  gateways:
    - istio-system/gateway
  http:
    - route:
        - destination:
            host: svc1
            port:
              number: 80
---
# This should get mutated to test-mutation-api.example.com
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-test1
  namespace: test-mutation
spec:
  hostnames:
    - "api.example.com"
  parentRefs:
    - name: gateway
      namespace: istio-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: svc1
          port: 80
---
# This already has namespace prefix but should still work
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-test2
  namespace: test-mutation
spec:
  hosts:
    - "test-mutation-app.example.com"
  gateways:
    - istio-system/gateway
  http:
    - route:
        - destination:
            host: svc2
            port:
              number: 80
